--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -45,48 +45,48 @@
                 <h2>Música</h2>
                 <article>
                     <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
+                        <img src="../img/banda1.jpg" title="Catupecu Machu"
+                            alt="Evento de la banda Catupecu Machu">
                     </figure>
-                    <h3>Nombre Show</h3>
+                    <h3>Catupecu Machu viene a la cuidad</h3>
                     <details>
                         <summary>
                             Más detalles
                         </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                        <p>Local Tupema 20hs.</p>
                     </details>
-                    <p>Insertarprecioaqui</p>
+                    <p>$799</p>
                     <input type="button" value="Comprar">
                 </article>
                 <article class="ElDeEnMedio">
                     <!--Esta clase le da al articulo un margen lateral-->
                     <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
+                        <img src="../img/banda2.jpg" title="Logo Foo Fighters"
+                            alt="Segundo logo de Nirvana">
                     </figure>
-                    <h3>Nombre Show</h3>
+                    <h3>Foo Fighters</h3>
                     <details>
                         <summary>
                             Más detalles
                         </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                        <p>Nirvana 2.0 viene a Uruguay</p>
                     </details>
-                    <p>Insertarprecioaqui</p>
+                    <p>$1994.50</p>
                     <input type="button" value="Comprar">
                 </article>
                 <article>
                     <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                        <img src="../img/banda3.jpg" title="Cantante adolecente"
                             alt="Una banda tocando música">
                     </figure>
-                    <h3>Nombre Show</h3>
+                    <h3>El Cuarteto se presenta</h3>
                     <details>
                         <summary>
                             Más detalles
                         </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                        <p>El cuarteto(Quinteto) están agotando las entradas</p>
                     </details>
-                    <p>Insertarprecioaqui</p>
+                    <p>$1600</p>
                     <input type="button" value="Comprar">
                 </article>
                 <footer>
@@ -163,17 +163,17 @@
                 <h2>Conferencias</h2>
                 <article>
                     <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
+                        <img src="../img/conferencia1.png" title="Conferencia de Genexus"
+                            alt="Conferencia de Genexus">
                     </figure>
-                    <h3>Nombre Conferencia</h3>
+                    <h3>Genexus</h3>
                     <details>
                         <summary>
                             Más detalles
                         </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                        <p>De 19hs. a 21hs. en el Hotel Sheraton</p>
                     </details>
-                    <p>Insertarprecioaqui</p>
+                    <p>$400</p>
                     <input type="button" value="Comprar">
                 </article>
                 <article class="ElDeEnMedio">
