--- a/Proyecto - Diseño de Interfaz Web/admin/listado.html
+++ b/Proyecto - Diseño de Interfaz Web/admin/listado.html
@@ -11,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="bodyGeneralBackend">
     <header>
         <figure>
-            <img src="../img/logo2.png">
+            <img src="../img/logo.png">
         </figure>
         <form action="index.html">
             <input type="submit" value="SALIR">
@@ -24,24 +24,27 @@
 
     <nav>
         <ul>
-            <li><a href="#">DASHBOARD</a></li> <!-- Preguntar al profe si poner uppercase en todos los casos -->
+            <li><a href="#">DASHBOARD</a></li>
             <li><a href="crearEvento.html">CREAR EVENTO</a></li>
             <li><a href="#" class="active">LISTADO DE EVENTOS</a></li>
             <li><a href="#">REPORTES</a></li>
             <li><a href="#">DESTACADOS</a></li>
             <li><a href="#">AGENTES DE VENTA</a></li>
-            <ul>
+        <ul>
     </nav>
 
-    <main>
-        <p>Administrador > Listado de Eventos</p>
-        <h1>LISTADO DE EVENTOS</h1>
-        <form action="crearEvento.html">
-            <input type="submit" value="AGREGAR EVENTOS">
-        </form>
-        <form id="filtrador">
-            <input type="text" placeholder="FILTRAR" id="Buscador">
-        </form>
+    <main class="mainGeneralBackend">
+
+        <section>
+            <p>Administrador > Listado de Eventos</p>
+            <h1>LISTADO DE EVENTOS</h1>
+            <form action="crearEvento.html">
+                <input type="submit" value="AGREGAR EVENTOS">
+            </form>
+            <form id="filtrador">
+                <input type="text" placeholder="FILTRAR" id="Buscador">
+            </form>
+        </section>
 
         <table>
             <tbody>
@@ -65,8 +68,8 @@
                     <td>$ 000</td>
                     <td>
                         <img src="../img/editar.png">
-                        <img src="../img/duplicar.png">
-                        <img src="../img/eliminar.png">
+                        <img class="tablaImgCentral" src="../img/duplicar.png">
+                        <img class="tablaImgRectangular" src="../img/eliminar.png">
                     </td>
                 </tr>
                 
@@ -80,8 +83,8 @@
                     <td>$ 000</td>
                     <td>
                         <img src="../img/editar.png">
-                        <img src="../img/duplicar.png">
-                        <img src="../img/eliminar.png">
+                        <img class="tablaImgCentral" src="../img/duplicar.png">
+                        <img class="tablaImgRectangular" src="../img/eliminar.png">
                     </td>
                 </tr>
 
@@ -95,8 +98,8 @@
                     <td>$ 000</td>
                     <td>
                         <img src="../img/editar.png">
-                        <img src="../img/duplicar.png">
-                        <img src="../img/eliminar.png">
+                        <img class="tablaImgCentral" src="../img/duplicar.png">
+                        <img class="tablaImgRectangular" src="../img/eliminar.png">
                     </td>
                 </tr>
 
@@ -110,8 +113,8 @@
                     <td>$ 000</td>
                     <td>
                         <img src="../img/editar.png">
-                        <img src="../img/duplicar.png">
-                        <img src="../img/eliminar.png">
+                        <img class="tablaImgCentral" src="../img/duplicar.png">
+                        <img class="tablaImgRectangular" src="../img/eliminar.png">
                     </td>
                 </tr>
 
@@ -125,8 +128,8 @@
                     <td>$ 000</td>
                     <td>
                         <img src="../img/editar.png">
-                        <img src="../img/duplicar.png">
-                        <img src="../img/eliminar.png">
+                        <img class="tablaImgCentral" src="../img/duplicar.png">
+                        <img class="tablaImgRectangular" src="../img/eliminar.png">
                     </td>
                 </tr>
 
@@ -140,8 +143,8 @@
                     <td>$ 000</td>
                     <td>
                         <img src="../img/editar.png">
-                        <img src="../img/duplicar.png">
-                        <img src="../img/eliminar.png">
+                        <img class="tablaImgCentral" src="../img/duplicar.png">
+                        <img class="tablaImgRectangular" src="../img/eliminar.png">
                     </td>
                 </tr>
 
@@ -155,8 +158,8 @@
                     <td>$ 000</td>
                     <td>
                         <img src="../img/editar.png">
-                        <img src="../img/duplicar.png">
-                        <img src="../img/eliminar.png">
+                        <img class="tablaImgCentral" src="../img/duplicar.png">
+                        <img class="tablaImgRectangular" src="../img/eliminar.png">
                     </td>
                 </tr>
 
@@ -170,8 +173,8 @@
                     <td>$ 000</td>
                     <td>
                         <img src="../img/editar.png">
-                        <img src="../img/duplicar.png">
-                        <img src="../img/eliminar.png">
+                        <img class="tablaImgCentral" src="../img/duplicar.png">
+                        <img class="tablaImgRectangular" src="../img/eliminar.png">
                     </td>
                 </tr>
 
@@ -185,8 +188,8 @@
                     <td>$ 000</td>
                     <td>
                         <img src="../img/editar.png">
-                        <img src="../img/duplicar.png">
-                        <img src="../img/eliminar.png">
+                        <img class="tablaImgCentral" src="../img/duplicar.png">
+                        <img class="tablaImgRectangular" src="../img/eliminar.png">
                     </td>
                 </tr>
 
@@ -200,8 +203,8 @@
                     <td>$ 000</td>
                     <td>
                         <img src="../img/editar.png">
-                        <img src="../img/duplicar.png">
-                        <img src="../img/eliminar.png">
+                        <img class="tablaImgCentral" src="../img/duplicar.png">
+                        <img class="tablaImgRectangular" src="../img/eliminar.png">
                     </td>
                 </tr>
 
@@ -215,8 +218,8 @@
                     <td>$ 000</td>
                     <td>
                         <img src="../img/editar.png">
-                        <img src="../img/duplicar.png">
-                        <img src="../img/eliminar.png">
+                        <img class="tablaImgCentral" src="../img/duplicar.png">
+                        <img class="tablaImgRectangular" src="../img/eliminar.png">
                     </td>
                 </tr>
 
@@ -230,8 +233,8 @@
                     <td>$ 000</td>
                     <td>
                         <img src="../img/editar.png">
-                        <img src="../img/duplicar.png">
-                        <img src="../img/eliminar.png">
+                        <img class="tablaImgCentral" src="../img/duplicar.png">
+                        <img class="tablaImgRectangular" src="../img/eliminar.png">
                     </td>
                 </tr>
 
@@ -245,13 +248,16 @@
                     <td>$ 000</td>
                     <td>
                         <img src="../img/editar.png">
-                        <img src="../img/duplicar.png">
-                        <img src="../img/eliminar.png">
+                        <img class="tablaImgCentral" src="../img/duplicar.png">
+                        <img class="tablaImgRectangular" src="../img/eliminar.png">
                     </td>
                 </tr>
 
             </tbody>
         </table>        
+
+        <figure><img src="../img/flechaDerecha.png"></figure>
+        <p id="paginasTabla"><span>1</span> 2 3</p>
 
     </main>
 </body>
