--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <figure>
-            <img src="../img/logo2.png" title="Logo de un puño sosteniendo un tiket"
+            <img src="../img/logo.png" title="Logo de un puño sosteniendo un tiket"
                 alt="Logo de un puño sosteniendo un tiket">
         </figure>
 
