--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -321,7 +321,8 @@
     </main>
     <footer>
         <p>@Copyright 2019-Insertar un buen título aquí</p>
-        <figure><img src="../img/fb.png"><img src="../img/ins.png"><img src="../img/tw.png"></figure>
+        <ul><li><img src="../img/transpa.png" id="Face"></li><li><img src="../img/transpa.png" id="Face"></li><li><img src="../img/transpa.png"></li></ul>
+        <figure></figure>
     </footer>
 </body>
 
