--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -321,8 +321,7 @@
     </main>
     <footer>
         <p>@Copyright 2019-Insertar un buen título aquí</p>
-        <ul><li><img src="../img/transpa.png" id="Face"></li><li><img src="../img/transpa.png" id="Face"></li><li><img src="../img/transpa.png"></li></ul>
-        <figure></figure>
+        <ul><li><img src="../img/transpa.png" id="Face"></li><li><img src="../img/transpa.png" id="Insta"></li><li><img src="../img/transpa.png" id="Tw"></li></ul>
     </footer>
 </body>
 
