Crear Evento casi terminado
Falta customizar el input file

--- a/Proyecto - Diseño de Interfaz Web/admin/listado.html
+++ b/Proyecto - Diseño de Interfaz Web/admin/listado.html
@@ -30,7 +30,7 @@
             <li><a href="#">REPORTES</a></li>
             <li><a href="#">DESTACADOS</a></li>
             <li><a href="#">AGENTES DE VENTA</a></li>
-        <ul>
+        </ul>
     </nav>
 
     <main class="mainGeneralBackend">
@@ -49,13 +49,13 @@
         <table>
             <tbody>
                 <tr>
-                   <th>Código</th> 
-                   <th>Nombre del evento</th> 
-                   <th>Organizador</th> 
-                   <th>Lugar</th> 
-                   <th>Día</th> 
-                   <th>Hora</th> 
-                   <th>Precio (desde)</th> 
+                    <th>Código</th>
+                    <th>Nombre del evento</th>
+                    <th>Organizador</th>
+                    <th>Lugar</th>
+                    <th>Día</th>
+                    <th>Hora</th>
+                    <th>Precio (desde)</th>
                 </tr>
 
                 <tr>
@@ -66,25 +66,13 @@
                     <td>00/00/00</td>
                     <td>00:00 hs</td>
                     <td>$ 000</td>
+
                     <td>
-                        <img src="../img/editar.png">
-                        <img class="tablaImgCentral" src="../img/duplicar.png">
-                        <img class="tablaImgRectangular" src="../img/eliminar.png">
-                    </td>
-                </tr>
-                
-                <tr>
-                    <td>00000</td>
-                    <td>Evento 1</td>
-                    <td>Organizador 1</td>
-                    <td>Lugar 1</td>
-                    <td>00/00/00</td>
-                    <td>00:00 hs</td>
-                    <td>$ 000</td>
-                    <td>
-                        <img src="../img/editar.png">
-                        <img class="tablaImgCentral" src="../img/duplicar.png">
-                        <img class="tablaImgRectangular" src="../img/eliminar.png">
+                        <ul>
+                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                        </ul>
                     </td>
                 </tr>
 
@@ -97,9 +85,11 @@
                     <td>00:00 hs</td>
                     <td>$ 000</td>
                     <td>
-                        <img src="../img/editar.png">
-                        <img class="tablaImgCentral" src="../img/duplicar.png">
-                        <img class="tablaImgRectangular" src="../img/eliminar.png">
+                        <ul>
+                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                        </ul>
                     </td>
                 </tr>
 
@@ -112,9 +102,11 @@
                     <td>00:00 hs</td>
                     <td>$ 000</td>
                     <td>
-                        <img src="../img/editar.png">
-                        <img class="tablaImgCentral" src="../img/duplicar.png">
-                        <img class="tablaImgRectangular" src="../img/eliminar.png">
+                        <ul>
+                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                        </ul>
                     </td>
                 </tr>
 
@@ -127,9 +119,11 @@
                     <td>00:00 hs</td>
                     <td>$ 000</td>
                     <td>
-                        <img src="../img/editar.png">
-                        <img class="tablaImgCentral" src="../img/duplicar.png">
-                        <img class="tablaImgRectangular" src="../img/eliminar.png">
+                        <ul>
+                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                        </ul>
                     </td>
                 </tr>
 
@@ -142,9 +136,11 @@
                     <td>00:00 hs</td>
                     <td>$ 000</td>
                     <td>
-                        <img src="../img/editar.png">
-                        <img class="tablaImgCentral" src="../img/duplicar.png">
-                        <img class="tablaImgRectangular" src="../img/eliminar.png">
+                        <ul>
+                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                        </ul>
                     </td>
                 </tr>
 
@@ -157,9 +153,11 @@
                     <td>00:00 hs</td>
                     <td>$ 000</td>
                     <td>
-                        <img src="../img/editar.png">
-                        <img class="tablaImgCentral" src="../img/duplicar.png">
-                        <img class="tablaImgRectangular" src="../img/eliminar.png">
+                        <ul>
+                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                        </ul>
                     </td>
                 </tr>
 
@@ -172,9 +170,11 @@
                     <td>00:00 hs</td>
                     <td>$ 000</td>
                     <td>
-                        <img src="../img/editar.png">
-                        <img class="tablaImgCentral" src="../img/duplicar.png">
-                        <img class="tablaImgRectangular" src="../img/eliminar.png">
+                        <ul>
+                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                        </ul>
                     </td>
                 </tr>
 
@@ -187,9 +187,11 @@
                     <td>00:00 hs</td>
                     <td>$ 000</td>
                     <td>
-                        <img src="../img/editar.png">
-                        <img class="tablaImgCentral" src="../img/duplicar.png">
-                        <img class="tablaImgRectangular" src="../img/eliminar.png">
+                        <ul>
+                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                        </ul>
                     </td>
                 </tr>
 
@@ -202,9 +204,11 @@
                     <td>00:00 hs</td>
                     <td>$ 000</td>
                     <td>
-                        <img src="../img/editar.png">
-                        <img class="tablaImgCentral" src="../img/duplicar.png">
-                        <img class="tablaImgRectangular" src="../img/eliminar.png">
+                        <ul>
+                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                        </ul>
                     </td>
                 </tr>
 
@@ -217,9 +221,11 @@
                     <td>00:00 hs</td>
                     <td>$ 000</td>
                     <td>
-                        <img src="../img/editar.png">
-                        <img class="tablaImgCentral" src="../img/duplicar.png">
-                        <img class="tablaImgRectangular" src="../img/eliminar.png">
+                        <ul>
+                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                        </ul>
                     </td>
                 </tr>
 
@@ -232,9 +238,11 @@
                     <td>00:00 hs</td>
                     <td>$ 000</td>
                     <td>
-                        <img src="../img/editar.png">
-                        <img class="tablaImgCentral" src="../img/duplicar.png">
-                        <img class="tablaImgRectangular" src="../img/eliminar.png">
+                        <ul>
+                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                        </ul>
                     </td>
                 </tr>
 
@@ -247,18 +255,36 @@
                     <td>00:00 hs</td>
                     <td>$ 000</td>
                     <td>
-                        <img src="../img/editar.png">
-                        <img class="tablaImgCentral" src="../img/duplicar.png">
-                        <img class="tablaImgRectangular" src="../img/eliminar.png">
+                        <ul>
+                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                        </ul>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>00000</td>
+                    <td>Evento 1</td>
+                    <td>Organizador 1</td>
+                    <td>Lugar 1</td>
+                    <td>00/00/00</td>
+                    <td>00:00 hs</td>
+                    <td>$ 000</td>
+                    <td>
+                        <ul>
+                            <li><img class="funcionEditar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionDuplicar" src="../img/transpa.png" id="Face"></li>
+                            <li><img class="funcionEliminar" src="../img/transpa.png"></li>
+                        </ul>
                     </td>
                 </tr>
 
             </tbody>
-        </table>        
+        </table>
 
-        <figure><img src="../img/flechaDerecha.png"></figure>
+        <figure id="flechaDerecha"><img src="../img/flechaDerecha.png"></figure>
         <p id="paginasTabla"><span>1</span> 2 3</p>
-
     </main>
 </body>
 
