--- a/Proyecto - Diseño de Interfaz Web/admin/index.html
+++ b/Proyecto - Diseño de Interfaz Web/admin/index.html
@@ -17,19 +17,19 @@
         <p id="pLogin">Todos los campos son obligatorios</p>
 
         <figure id="figureLogin">
-            <img  id="logoLogin" src="../img/logo.png">
+            <img id="logoLogin" src="../img/logo.png">
         </figure>
 
-        <form id="formLogin" action="listado.html"> 
+        <form id="formLogin" action="crearEvento.html">
             <label for="txtUsuario">Usuario </label>
             <input type="text" id="txtUsuario" placeholder="Nombre de usuario" required>
 
             <label for="txtContraseña">Contraseña</label>
             <input type="password" id="txtContraseña" placeholder="Contraseña" required>
-            
+
             <input id="checkboxLogin" type="checkbox">
             <label id="labelCheckbox" for="checkboxLogin"> Recordar datos</label>
-            
+
             <input type="submit" id="btnIngresarLogin" value="INGRESAR">
         </form>
     </main>
