--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -215,47 +215,47 @@
                 <h2>Deportes</h2>
                 <article>
                     <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
+                        <img src="../img/deportes1.jpg" title="Voleyball:Los gigantes del sur vs UPCN"
+                            alt="Los gigantes del sur vs UPCN">
                     </figure>
-                    <h3>Nombre Partido</h3>
+                    <h3>Los gigantes del sur vs UPCN</h3>
                     <details>
                         <summary>
                             Más detalles
                         </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                        <p>Sabado 28/11 21:30hs.</p>
                     </details>
-                    <p>Insertarprecioaqui</p>
+                    <p>$400</p>
                     <input type="button" value="Comprar">
                 </article>
                 <article class="ElDeEnMedio">
                     <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
+                        <img src="../img/deportes2.jpg" title="Basketball:Lakers vs Chicago Bulls"
+                            alt="Basketball:Lakers vs Chicago Bulls">
                     </figure>
-                    <h3>Nombre Partido</h3>
+                    <h3>Basketball:Lakers vs Chicago Bulls</h3>
                     <details>
                         <summary>
                             Más detalles
                         </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                        <p>Domingo 10/11 18hs</p>
                     </details>
-                    <p>Insertarprecioaqui</p>
+                    <p>$460</p>
                     <input type="button" value="Comprar">
                 </article>
                 <article>
                     <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
+                        <img src="../img/deportes3.jpg" title="Pittsburgh Penguins vs Nasgville Predators"
+                            alt="Pittsburgh Penguins vs Nasgville Predators">
                     </figure>
-                    <h3>Nombre Partido</h3>
+                    <h3>Pittsburgh Penguins vs Nasgville Predators</h3>
                     <details>
                         <summary>
                             Más detalles
                         </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                        <p>Miercoles 27/11 21:30hs.</p>
                     </details>
-                    <p>Insertarprecioaqui</p>
+                    <p>$510</p>
                     <input type="button" value="Comprar">
                 </article>
                 <footer>
