--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -178,32 +178,32 @@
                 </article>
                 <article class="ElDeEnMedio">
                     <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
+                        <img src="../img/conferencia2.png" title="InfoCasas da una conferencia"
+                            alt="InfoCasas da una conferencia">
                     </figure>
-                    <h3>Nombre Conferencia</h3>
+                    <h3>InfoCasas prepara otra conferencia</h3>
                     <details>
                         <summary>
                             Más detalles
                         </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                        <p>De 16hs. a 19hs. en el Hotel Sheraton</p>
                     </details>
-                    <p>Insertarprecioaqui</p>
+                    <p>$380</p>
                     <input type="button" value="Comprar">
                 </article>
                 <article>
                     <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
+                        <img src="../img/conferencia3.png" title="Conferencia de DevCode"
+                            alt="Conferencia de DevCode">
                     </figure>
-                    <h3>Nombre Conferencia</h3>
+                    <h3>DevCode revele sus planes economicos para el siguiente año</h3>
                     <details>
                         <summary>
                             Más detalles
                         </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                        <p>DevCode presenta su plan de mercado como ejemplo.</p>
                     </details>
-                    <p>Insertarprecioaqui</p>
+                    <p>$680</p>
                     <input type="button" value="Comprar">
                 </article>
                 <footer>
