--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Title</title>
+    <title>SpinelsTicket-Venta de tickets online</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -32,7 +32,7 @@
         <nav id="AyudaIngresar">
             <ul>
                 <li><a href="#">AYUDA</a></li>
-                <li><a href="#">INGRESAR</a></li>
+                <li><a href="../admin/index.html">INGRESAR</a></li>
             </ul>
         </nav>
     </header>
@@ -216,9 +216,9 @@
                 <article>
                     <figure>
                         <img src="../img/deportes1.jpg" title="Voleyball:Los gigantes del sur vs UPCN"
-                            alt="Los gigantes del sur vs UPCN">
+                            alt="Voleyball:Los gigantes del sur vs UPCN">
                     </figure>
-                    <h3>Los gigantes del sur vs UPCN</h3>
+                    <h3>Voleyball:Los gigantes del sur vs UPCN</h3>
                     <details>
                         <summary>
                             Más detalles
@@ -245,10 +245,10 @@
                 </article>
                 <article>
                     <figure>
-                        <img src="../img/deportes3.jpg" title="Pittsburgh Penguins vs Nasgville Predators"
-                            alt="Pittsburgh Penguins vs Nasgville Predators">
+                        <img src="../img/deportes3.jpg" title="Hockey:Pittsburgh Penguins vs Nasgville Predators"
+                            alt="Hockey:Pittsburgh Penguins vs Nasgville Predators">
                     </figure>
-                    <h3>Pittsburgh Penguins vs Nasgville Predators</h3>
+                    <h3>Hockey:Pittsburgh Penguins vs Nasgville Predators</h3>
                     <details>
                         <summary>
                             Más detalles
@@ -294,16 +294,16 @@
             <h2>Preguntas frecuentes</h2>
             <ul>
                 <li>
-                    <h3>Pregunta 1</h3>
-                    <p>Respuesta 1</p>
+                    <h3>¿Como puedo contactarlos?</h3>
+                    <p>En cualquier abitab puedes retirar tu ticket, pero si buscas ayuda con uan compra o devolución puedes llamar a nuestro número 096-771-251</p>
                 </li>
                 <li>
-                    <h3>Pregunta 2</h3>
-                    <p>Respuesta 2</p>
+                    <h3>¿Puedo cancelar una compra?</h3>
+                    <p>La inasistencia a un evento no es razón para cancelar una compra. Por otro lado contactando con antención al cliente se puede brindar apoyo al cliente para realizar esta acción.</p>
                 </li>
                 <li>
-                    <h3>Pregunta 3</h3>
-                    <p>Respuesta 3</p>
+                    <h3>¿Qué pasa cuando un evento se cancela o posterga?</h3>
+                    <p>Este es uno de los casos en los que la empresa se compromete completamente a la devolución del efectivo, en caso de que el evento se re-programe, se comunicará con el cliente preguntando si quiere darse de baja al evento.</p>
                 </li>
             </ul>
         </section>
@@ -320,7 +320,7 @@
         
     </main>
     <footer>
-        <p>@Copyright 2019-Insertar un buen título aquí</p>
+        <p>@Copyright 2019-SpinelsTicket</p>
         <ul><li><img src="../img/transpa.png" id="Face"></li><li><img src="../img/transpa.png" id="Insta"></li><li><img src="../img/transpa.png" id="Tw"></li></ul>
     </footer>
 </body>
